<resources>
    <string name="app_name">MovieWise</string>
</resources>