...
            OutlinedTextField(
                shape = RoundedCornerShape(12.dp),
                value = query,
                onValueChange = { newQuery ->
                    onEvent(SearchContract.Event.QueryChanged(newQuery))
                },
                placeholder = { Text("Search for movies...") },
                leadingIcon = {
                    Icon(imageVector = Icons.Default.Search, contentDescription = "search")
                },
                trailingIcon = {
                    if (query.isNotEmpty()) Icon(
                        imageVector = Icons.Default.Clear,
...
